<resources>
    <string name="app_name">Posgrad</string>
    <string name="title_home">Home</string>

    <!--TÍTULOS DE ATIVIDADES/FRAGMENTOS -->
    <string name="title_activity_dashboard">Dashboard</string>"
    <string name="title_activity_selfservice">Self-Service</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_times">Times</string>
    <string name="title_activity_game">Game</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_avatar">Avatar do usuário</string>


    <!--LOGIN -->
    <string name="email_text">Email:</string>
    <string name="password_text">Password:</string>
    <string name="login_text">Login</string>
    <string name="signin_text">Sign In</string>
</resources>
