<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_dashboard"
            android:title="@string/title_activity_dashboard"
            android:icon="@drawable/ic_home_black_24dp"/>
    <item android:title="@string/title_activity_selfservice" android:id="@+id/navigation_self"
          android:icon="@drawable/self_icon"/>
    <item android:title="@string/title_activity_news" android:id="@+id/navigation_news"
          android:icon="@drawable/news_icon"/>
    <item android:title="@string/title_activity_times" android:id="@+id/navigation_times"
          android:icon="@drawable/times_icon"/>
    <item android:title="@string/title_activity_game" android:id="@+id/navigation_game"
          android:icon="@drawable/game_icon"/>

</menu>
