<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <Button
            android:text="@string/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="163dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="163dp" app:layout_constraintHorizontal_bias="0.666"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/passwordInput"/>
    <TextView
            android:text="@string/email_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="196dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"/>
    <TextView
            android:text="@string/password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.284" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailInput"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailText"
            android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordInput"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/passwordText"
            android:layout_marginStart="50dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>